footer alignment fix

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,6 +2,7 @@ footer {
   padding: 2rem;
   background-color: var(--overlay-background-color);
   font-size: var(--body-font-size-s);
+  width: 100%;
 }
 
 footer .footer {
@@ -11,4 +12,16 @@ footer .footer {
 
 footer .footer p {
   margin: 0;
+}
+
+footer ul {
+  list-style: none; 
+  padding: 0;       
+  margin: 0;       
+  display: flex; 
+  flex-wrap: wrap; 
+}
+
+ul li {
+  margin-right: 10px; 
 }
